--- a/servers.yml
+++ b/servers.yml
@@ -29,3 +29,32 @@ Resources:
           FromPort: 0
           ToPort: 65535
           CidrIp: 0.0.0.0/0
+  WebAppLaunchConfig:
+    Type: AWS::AutoScaling::LaunchConfiguration
+    Properties:
+        ImageId: ami-04b762b4289fba92b
+        InstanceType: t3.medium
+        BlockDeviceMappings: 
+          - DeviceName: "/dev/sdk"
+            Ebs:
+              VolumeSize: '10'
+        SecurityGroups:
+          - Ref: WebServerSecurityGroup
+        UserData: 
+          Fn::Base64: !Sub |
+            #!/bin/bash
+            apt-get update -y
+            apt-get install unzip awscli -y
+            apt-get install apache2 -y
+            systemctl start apache2.service
+  AutoScalingGroup:
+    Type: AWS::AutoScaling::AutoScalingGroup
+    Properties: 
+      VPCZoneIdentifier: 
+        - Fn::ImportValue:
+            !Sub "${EnvironmentName}-PRIV-NETS"
+      LaunchConfigurationName: 
+        Ref : WebAppLaunchConfig
+      MaxSize: '2'
+      MinSize: '1'
+      
