--- a/ourinfra.yml
+++ b/ourinfra.yml
@@ -206,8 +206,14 @@ Outputs:
         Name: !Sub ${EnvironmentName}-VPCID
   PrivateSubnets:
       Description: A list of the private subnets
-      Value: !Join [ ",", [ !Ref PrivateSu2bnet1, !Ref PrivateSubnet2 ]]
+      Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
       Export:
         Name: !Sub ${EnvironmentName}-PRIV-NETS
+  PublicSubnets:
+        Description: A list of the public subnets
+        Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
+        Export:
+          Name: !Sub ${EnvironmentName}-PUB1-SN
+          Name: !Sub ${EnvironmentName}-PUB2-SN
 
     
