--- a/ourinfra.yml
+++ b/ourinfra.yml
@@ -209,11 +209,20 @@ Outputs:
       Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ]]
       Export:
         Name: !Sub ${EnvironmentName}-PRIV-NETS
+  PublicSubnetID1:
+      Description: Public subnet 1
+      Value: !Ref PublicSubnet1
+      Export:
+        Name: !Sub ${EnvironmentName}-PUB1-SN 
+  PublicSubnetID2:
+      Description: Public subnet 2
+      Value: !Ref PublicSubnet2
+      Export:
+        Name: !Sub ${EnvironmentName}-PUB2-SN 
   PublicSubnets:
         Description: A list of the public subnets
         Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ]]
         Export:
-          Name: !Sub ${EnvironmentName}-PUB1-SN
-          Name: !Sub ${EnvironmentName}-PUB2-SN
+          Name: !Sub ${EnvironmentName}-NETS
 
     
