--- a/servers.yml
+++ b/servers.yml
@@ -17,8 +17,8 @@ Resources:
             !Sub "${EnvironmentName}-VPCID"
         SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 8080
-          ToPort: 8080
+          FromPort: 80
+          ToPort: 80
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 22
@@ -101,7 +101,7 @@ Resources:
       - Fn::ImportValue: !Sub "${EnvironmentName}-PUB1-SN"
       - Fn::ImportValue: !Sub "${EnvironmentName}-PUB2-SN"
       SecurityGroups:
-      - Ref:LoadBalancerSecurityGroup
+      - Ref: LoadBalancerSecurityGroup
   Listener:
     Type: AWS::ElasticLoadBalancingV2::Listener
     Properties:
@@ -118,10 +118,11 @@ Resources:
     Properties:
       Actions:
       - Type: forward
+        TargetGroupArn: !Ref 'WebAppTargetGroup'
       Conditions:
       - Field: path-pattern
         Values: [/]
-      ListenerArn: !Ref 'Listener'
+      ListenerArn: !Ref 'Listener' 
       Priority: 1
 
       
